* Fixed content jump when navbar switches to sticky mode. * Added navbar stickiness to patient pages

--- a/app/less/custom.less
+++ b/app/less/custom.less
@@ -877,12 +877,13 @@ h3.treatment-arm-accrual {
 
 .sticky-navbar.affix {
   width: 100%;
+  .drop-shadow(0px, 3px, 4px, 0, 0.15);
 }
 
 a.anchor.statistics {
     display: block;
     position: relative;
-    top: -85px;
+    top: -78px;
     visibility: hidden;
 }
 
@@ -898,4 +899,8 @@ a.anchor.activity {
     position: relative;
     top: -60px;
     visibility: hidden;
+}
+
+.sticky-navbar.affix+div.wrapper {
+  padding-top: 85px;
 }
